--- a/views/camera.ejs
+++ b/views/camera.ejs
@@ -3,14 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webcam</title>
     <style>
         body {
@@ -61,16 +53,14 @@
             }
         }
     </style>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <div id="content">
         <h1>Camera Options</h1>
-        <button class="btn btn-outline-success" onclick="openCamera()">Open Webcam</button>
-        <button class="btn btn-outline-success" onclick="closeCamera()" style="display:none;">Close Webcam</button>
-        <button class="btn btn-outline-success" onclick="takeSnapshot()">Take Snapshot</button>
-        <button class="btn btn-outline-success" onclick="downloadSnapshot()" style="display:none;">Download Snapshot</button>
+        <button onclick="openCamera()">Open Webcam</button>
+        <button onclick="closeCamera()" style="display:none;">Close Webcam</button>
+        <button onclick="takeSnapshot()">Take Snapshot</button>
+        <button onclick="downloadSnapshot()" style="display:none;">Download Snapshot</button>
         <br>
         <video id="video" style="display:none;"></video>
         <canvas id="canvas" width="400" height="300" style="display:none;"></canvas>
@@ -124,7 +114,5 @@
             document.body.removeChild(link);
         }
     </script>
-</body>
-</html>
 </body>
 </html>
